--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 #root {
-  padding: 2rem;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  padding: 0 1rem;
 }
 
 .logo {
